--- a/src/styles/_file-uploader.scss
+++ b/src/styles/_file-uploader.scss
@@ -1,7 +1,7 @@
 .upload-file-wrapper {
   width: 100%;
   max-width: 100%;
-  height: 95%;
+  height: 99%;
   border: solid 2px $disabled-color-1;
   position: relative;
 
@@ -34,6 +34,7 @@
 
 .uploaded-wrapper {
   @include flex-between(column);
+  overflow: hidden;
   .uploaded-image {
     max-width: 100%;
     max-height: 100%;
