--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@
 @import './styles/nav-bar/nav-bar';
 @import './styles/nav-bar/nav-bar-profile';
 @import './styles/nav-bar/nav-bar-list';
-
+@import './styles/loading';
 @import './styles/breadcrumbs';
 @import './styles/employees/employees';
 
