--- a/src/styles/nav-bar/_nav-bar.scss
+++ b/src/styles/nav-bar/_nav-bar.scss
@@ -1,3 +1,8 @@
+app-nav-bar {
+  display: flex;
+  flex-direction: column;
+}
+
 .sidenav-container {
   height: 100%;
 }
@@ -9,7 +14,7 @@
 }
 
 .mat-toolbar.header {
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   z-index: 1000;
