--- a/src/app/admin/shared/components/error-message/error-message.component.html
+++ b/src/app/admin/shared/components/error-message/error-message.component.html
@@ -1,1 +1,10 @@
-<div>{{ handleErrorMessage() }}</div>
+<div class="d-flex">
+  <img
+    src="../../../../../assets/icons/error.svg"
+    alt="error"
+    height="18"
+    width="auto"
+    class="pr-3"
+  />
+  <div class="fs-9">{{ errrorMessage }}</div>
+</div>
