--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -1,7 +1,9 @@
 .form-container {
+  font-size: $main-font-size;
   .form-wrapper {
     overflow: hidden;
     .mat-grid-tile {
+      overflow: initial;
       .mat-form-field {
         width: 100%;
       }
