--- a/src/app/admin/employees/components/employees/employees.component.html
+++ b/src/app/admin/employees/components/employees/employees.component.html
@@ -3,7 +3,12 @@
     <mat-card-title class="lqh-mat-card__title">Employee List</mat-card-title>
   </mat-card-header>
   <mat-card-actions class="lqh-mat-card__action">
-    <button mat-flat-button color="primary" (click)="openCreateEmployeesDialog()" appDoubleClick>
+    <button
+      mat-button
+      class="btn btn-radius-primary"
+      (click)="openCreateEmployeesDialog()"
+      appDoubleClick
+    >
       <mat-icon>add</mat-icon>
       Add New Employee
     </button>
