edit error-message, adding transation

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,7 @@
 @import './styles/utils/font-size';
 @import './styles/utils/font-weight';
 @import './styles/utils/display';
+@import './styles/utils/border';
 
 // ----------------------------------------------------------------
 // ---------------------------LAYOUT-------------------------------
