--- a/src/app/admin/shared/components/error-message/error-message.component.html
+++ b/src/app/admin/shared/components/error-message/error-message.component.html
@@ -6,5 +6,5 @@
     width="auto"
     class="pr-3"
   />
-  <div class="fs-9">{{ errrorMessage }}</div>
+  <div class="fs-9" *ngIf="errrorMessage">{{ errrorMessage }}</div>
 </div>
