--- a/src/app/admin/employees/components/employees-table/employees-table.component.html
+++ b/src/app/admin/employees/components/employees-table/employees-table.component.html
@@ -59,7 +59,7 @@
           <button mat-icon-button title="Edit" (click)="edit(element)">
             <mat-icon>launch</mat-icon>
           </button>
-          <button mat-icon-button color="warn" title="Delete" (click)="delete(element.uuid)">
+          <button mat-icon-button color="warn" title="Delete" (click)="delete(element.id)">
             <mat-icon>delete_outline</mat-icon>
           </button>
         </div>
