--- a/src/app/admin/employees/components/employees/employees.component.html
+++ b/src/app/admin/employees/components/employees/employees.component.html
@@ -5,7 +5,7 @@
   <mat-card-actions class="lqh-mat-card__action">
     <button
       mat-button
-      class="btn btn-radius-primary border-0"
+      class="btn btn-radius-accent border-0"
       (click)="openCreateEmployeesDialog()"
       appDoubleClick
     >
