--- a/src/app/admin/nav-bar/components/nav-bar/nav-bar.component.html
+++ b/src/app/admin/nav-bar/components/nav-bar/nav-bar.component.html
@@ -8,8 +8,7 @@
   >
     <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
   </button>
-  <img src="assets/icons/biohazard-white.svg" alt="logo" height="40px" width="40px" />
-  &nbsp;&nbsp;<span>LQH</span>
+  <img src="assets/icons/logo-none.png" alt="logo" height="50px" />
 </mat-toolbar>
 <app-loading></app-loading>
 <mat-sidenav-container class="sidenav-container">
