--- a/src/app/admin/product/books/components/books-form/books-form.component.html
+++ b/src/app/admin/product/books/components/books-form/books-form.component.html
@@ -13,9 +13,7 @@
       <!-- Divider -->
       <mat-grid-tile [colspan]="12" [rowspan]="1" class="title-divider">
         <div class="title mat-h2">
-          <span>
-            BASIC INFORMATION
-          </span>
+          <span> BASIC INFORMATION </span>
         </div>
         <div class="divider">
           <mat-divider color="primary"></mat-divider>
@@ -55,7 +53,7 @@
       </mat-grid-tile>
 
       <mat-grid-tile [colspan]="4" [rowspan]="1">
-        <input type="hidden" formControlName="uuid" />
+        <input type="hidden" formControlName="id" />
         <mat-form-field appearance="standard">
           <mat-label>Name</mat-label>
           <input matInput formControlName="name" placeholder="Name" />
@@ -101,9 +99,7 @@
       <!-- Divider -->
       <mat-grid-tile [colspan]="12" [rowspan]="1" class="title-divider">
         <div class="title mat-h2">
-          <span>
-            DETAIL INFORMATION
-          </span>
+          <span> DETAIL INFORMATION </span>
         </div>
         <div class="divider">
           <mat-divider color="primary"></mat-divider>
@@ -240,9 +236,7 @@
       <!-- Divider -->
       <mat-grid-tile [colspan]="12" [rowspan]="1" class="title-divider">
         <div class="title mat-h2">
-          <span>
-            DESCRIPTION
-          </span>
+          <span> DESCRIPTION </span>
         </div>
         <div class="divider">
           <mat-divider color="primary"></mat-divider>
@@ -277,9 +271,7 @@
       <!-- Divider -->
       <mat-grid-tile [colspan]="12" [rowspan]="1" class="title-divider">
         <div class="title mat-h2">
-          <span>
-            SALES INFORMATION
-          </span>
+          <span> SALES INFORMATION </span>
         </div>
         <div class="divider">
           <mat-divider color="primary"></mat-divider>
@@ -343,9 +335,7 @@
 
       <mat-grid-tile [colspan]="12" [rowspan]="1" class="title-divider">
         <div class="title mat-h2">
-          <span>
-            PROMOTIONS INFORMATION
-          </span>
+          <span> PROMOTIONS INFORMATION </span>
         </div>
         <div class="divider">
           <mat-divider color="primary"></mat-divider>
