--- a/src/app/admin/suppliers/components/suppliers-form/suppliers-form.component.html
+++ b/src/app/admin/suppliers/components/suppliers-form/suppliers-form.component.html
@@ -44,7 +44,7 @@
 
       <!-- Name Form -->
       <mat-grid-tile [colspan]="4" [rowspan]="1">
-        <input type="hidden" formControlName="uuid" />
+        <input type="hidden" formControlName="id" />
         <mat-form-field appearance="standard">
           <mat-label>Name</mat-label>
           <input matInput formControlName="name" placeholder="Full Name" required />
