--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,10 @@
-$primary: #2196f3;
-$accent: #26c6da;
+$primary: #00bcd4;
+$primary-light: #b3e5fc;
+$primary-dark: #0288d1;
 $primary-hover: #7460ee;
+
+$accent: #ff9800;
+$accent-hover: #ff5722;
 
 $main-font-size: 16px;
 
