--- a/src/styles/utils/_animation.scss
+++ b/src/styles/utils/_animation.scss
@@ -11,7 +11,7 @@
   -webkit-border-radius: 100%;
   -moz-border-radius: 100%;
   border-radius: 100%;
-  border: 2px solid $accent;
+  border: 2px solid $primary;
   opacity: 0.3;
 
   -webkit-animation: ring-circle-anim 1.2s infinite ease-in-out;
