--- a/src/app/admin/authors/components/authors-form/authors-form.component.html
+++ b/src/app/admin/authors/components/authors-form/authors-form.component.html
@@ -23,7 +23,7 @@
       </mat-grid-tile>
 
       <mat-grid-tile [colspan]="4" [rowspan]="1">
-        <input type="hidden" formControlName="uuid" />
+        <input type="hidden" formControlName="id" />
         <mat-form-field appearance="standard">
           <mat-label>Full Name</mat-label>
           <input matInput formControlName="fullName" placeholder="Full Name" required />
