--- a/src/app/admin/categories/components/categories-form/categories-form.component.html
+++ b/src/app/admin/categories/components/categories-form/categories-form.component.html
@@ -42,7 +42,7 @@
       </mat-grid-tile>
 
       <mat-grid-tile [colspan]="4" [rowspan]="1">
-        <input type="hidden" formControlName="uuid" />
+        <input type="hidden" formControlName="id" />
         <mat-form-field appearance="standard">
           <mat-label>Name</mat-label>
           <input matInput formControlName="name" placeholder="Full Name" required />
