--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,7 @@
 @import './styles/utils/font-weight';
 @import './styles/utils/display';
 @import './styles/utils/border';
+@import './styles/utils/box-size';
 
 // ----------------------------------------------------------------
 // ---------------------------LAYOUT-------------------------------
@@ -27,6 +28,7 @@
 @import './styles/card';
 @import './styles/form';
 @import './styles/file-uploader';
+@import './styles/password-input';
 // ----------------------------------------------------------------
 // ---------------------------COMPONENTS---------------------------
 // ----------------------------------------------------------------
