--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,6 +18,7 @@ $black-7-opacity: rgba(9, 32, 51, 0.7);
 $black-8-opacity: rgba(9, 32, 51, 0.8);
 $black-9-opacity: rgba(9, 32, 51, 0.9);
 $black-10-opacity: rgba(9, 33, 52, 1);
+$black: rgba(9, 33, 52, 1);
 
 $white-1-opacity: rgba(255, 255, 255, 0.1);
 $white-2-opacity: rgba(255, 255, 255, 0.2);
@@ -29,6 +30,7 @@ $white-7-opacity: rgba(255, 255, 255, 0.7);
 $white-8-opacity: rgba(255, 255, 255, 0.8);
 $white-9-opacity: rgba(255, 255, 255, 0.9);
 $white-10-opacity: rgba(255, 255, 255, 10);
+$white: rgba(255, 255, 255, 10);
 
 $disabled-color-1: rgba(0, 0, 0, 0.12);
 $disabled-color-2: rgba(0, 0, 0, 0.26);
