update password-input, add base-form

--- a/src/app/admin/employees/components/employees-form/employees-form.component.html
+++ b/src/app/admin/employees/components/employees-form/employees-form.component.html
@@ -1,6 +1,7 @@
 <div class="form-container">
   <div mat-dialog-title>
-    <h2>Create Employees</h2>
+    <h2 *ngIf="getDialogMode() === 'CREATE'">{{ 'EmployeeCreating' | translate }}</h2>
+    <h2 *ngIf="getDialogMode() === 'EDIT'">{{ 'EmployeeEditing' | translate }}</h2>
     <div mat-dialog-title class="icon-exit">
       <button mat-button mat-icon-button [mat-dialog-close]="false">
         <mat-icon>close</mat-icon>
@@ -125,30 +126,12 @@
         </mat-form-field>
       </mat-grid-tile>
 
-      <!-- <mat-grid-tile [colspan]="4" [rowspan]="1">
-        <mat-form-field appearance="standard">
-          <mat-label>Password</mat-label>
-          <input
-            matInput
-            type="password"
-            formControlName="password"
-            placeholder="Password"
-            [appInputLetter]="true"
-            autocomplete="off"
-            required
-          />
-          <app-lqh-progress-bar matSuffix></app-lqh-progress-bar>
-          <mat-error>
-            <app-error-message [control]="form.controls?.password"></app-error-message>
-          </mat-error>
-        </mat-form-field>
-      </mat-grid-tile> -->
-
       <mat-grid-tile [colspan]="4" [rowspan]="1">
         <app-password-input
           [control]="form.controls?.password"
           [fieldID]="'password'"
           class="w-100"
+          [disabled]="getDialogMode() === 'EDIT'"
         >
         </app-password-input>
       </mat-grid-tile>
@@ -161,8 +144,8 @@
             type="password"
             formControlName="confirmPassword"
             placeholder="Password"
-            [appInputLetter]="true"
             autocomplete="off"
+            [appDisableControl]="getDialogMode() === 'EDIT'"
             required
           />
           <mat-error>
