--- a/src/app/admin/shared/components/password-input/password-input.component.html
+++ b/src/app/admin/shared/components/password-input/password-input.component.html
@@ -6,6 +6,7 @@
     type="password"
     placeholder="Password"
     autocomplete="off"
+    [appDisableControl]="disabled"
     required
   />
   <mat-error>
